---
source: crates/kirin-derive-core/src/field/tests/test_enum_mut.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArgumentsMut<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsMutIter<'a, ::kirin::ir::SSAValue>;
    fn arguments_mut(&'a mut self) -> Self::Iter {
        match self {
            TestEnum::VariantA { wrapped, .. } => TestEnumArgumentsMutIter::VariantA(
                <InnerStructA<T> as ::kirin::ir::HasArgumentsMut>::arguments_mut(wrapped),
            ),
            TestEnum::VariantB(field_0, ..) => TestEnumArgumentsMutIter::VariantB(
                <InnerStructB as ::kirin::ir::HasArgumentsMut>::arguments_mut(field_0),
            ),
            TestEnum::VariantC { a, c, .. } => {
                TestEnumArgumentsMutIter::VariantC(std::iter::once(a).chain(std::iter::once(c)))
            }
            TestEnum::VariantD(field_0, field_1, field_2, ..) => {
                TestEnumArgumentsMutIter::VariantD(
                    std::iter::once(field_0).chain(std::iter::once(field_2)),
                )
            }
        }
    }
}
pub enum TestEnumArgumentsMutIter<'a, T> {
    VariantA(<InnerStructA<T> as ::kirin::ir::HasArgumentsMut<'a>>::Iter),
    VariantB(<InnerStructB as ::kirin::ir::HasArgumentsMut<'a>>::Iter),
    VariantC(
        std::iter::Chain<
            std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
            std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
        >,
    ),
    VariantD(
        std::iter::Chain<
            std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
            std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
        >,
    ),
}
impl<'a, T> Iterator for TestEnumArgumentsMutIter<'a, T> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsMutIter::VariantA(iter) => iter.next(),
            TestEnumArgumentsMutIter::VariantB(iter) => iter.next(),
            TestEnumArgumentsMutIter::VariantC(iter) => iter.next(),
            TestEnumArgumentsMutIter::VariantD(iter) => iter.next(),
        }
    }
}
